- Fixed some case sensitive bugs in the NXC parser.
- Fixed NBC sizeof to not pad
- Add compiler status message if compile failed
- Fixed bug in reference parameters following an array or UDT argument
- Added support for string expressions in several API functions including StrCat.
- Default compiler firmware version target is now 128 (used to be 105).
- Header files now contain doxygen comments

Version 1.0.1.b36
-----------------
- Added support for \", \', and \\ embedded in NXC and NBC strings.
- Added -ER=n maximum compiler error switch. Filtered out duplicate errors as well.
- Added support for 2D scalar constant array initialization using nested brace pairs.
  e.g., int xyz[][] = {{1, 2, 3}, {4, 5, 6}, {7, 8, 9}};
- Added support for global constant string initialization and subsequent usage.
  e.g., const string g_bar = "bar"; const string g_foo = g_bar;
- Added support for constant string array initialization using comma-separated
  string constants within brace pairs. e.g., string msgs[] = {"hi", "there", "testing", g_bar, g_foo};
- Added support for multi-dimensional array indexing on both the LHS and RHS side of expressions.
  e.g., foo[i][j] = foo[i][j] + 1;
- Added support for returning a struct from a function.
- Added support for #download "filename" preprocessor command in NBC/NXC
- Added support for import keyword in RICScript
- Added support for struct "dot" notation, e.g., mydata[0].foo = 10; int x = mydata[0].foo;
- Added support for "typedef struct" syntax
- Added support for byte array to string assignment in NXC
- Fixed bug in Random() API function
- Added support for array math operation syntax in NXC, e.g., array += 2; array = !array, etc...
- Fixed multi-line macro parsing bugs and problems with preprocessor directives mixed in 
  with expressions.
- Compiler is now compatible with both 1.0x firmwares and 1.2x firmwares.
- Added API support for HiTechnic touch sensor multiplexer in NBC/NXC.
- Added support for variadic macros.