@@ -1,0 +1,21 @@
+string ConcStringInt(string s,int t)
+{
+  string u = NumToStr(t);
+  return s+u;
+}
+
+task main()
+{
+  int fooBarIsh;
+  while (fooBarIsh = Random())
+  {
+    NumOut(0, LCD_LINE1, fooBarIsh);
+  }
+  for (int i = 0; Sensor(S1) > i; i++)
+  {
+  }
+  string test = ConcStringInt("test", fooBarIsh = Sensor(S1));
+  TextOut(0, LCD_LINE1, test);
+  int xyz = fooBarIsh = 23;
+  NumOut(0, LCD_LINE1, xyz);
+}
